RESOLVED FIXED231932
AX: Fix broken spec links in AccessibilityObject.cpp and AccessibilityTree.cpp
https://bugs.webkit.org/show_bug.cgi?id=231932
Summary AX: Fix broken spec links in AccessibilityObject.cpp and AccessibilityTree.cpp
Tyler Wilcock
Reported 2021-10-18 19:15:08 PDT
Fix broken spec links in AccessibilityObject.cpp and AccessibilityTree.cpp
Attachments
Patch (3.76 KB, patch)
2021-10-18 19:16 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2021-10-18 19:15:18 PDT
Tyler Wilcock
Comment 2 2021-10-18 19:16:51 PDT
EWS
Comment 3 2021-10-19 08:38:09 PDT
Committed r284455 (243215@main): <https://commits.webkit.org/243215@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441674 [details].
Note You need to log in before you can comment on or make changes to this bug.