AX: Fix broken spec links in AccessibilityObject.cpp and AccessibilityTree.cpp https://bugs.webkit.org/show_bug.cgi?id=231932

Patch by Tyler Wilcock <tyler_w@apple.com> on 2021-10-19
Reviewed by Chris Fleizach.

Fix broken spec links.

* accessibility/AccessibilityObject.cpp:
(WebCore::initializeRoleMap):
(WebCore::AccessibilityObject::buttonRoleType const):
* accessibility/AccessibilityTree.cpp:
(WebCore::AccessibilityTree::isTreeValid const):

Canonical link: https://commits.webkit.org/243215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284455 268f45cc-cd09-0410-ab3c-d52691b4dbfc